--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,6 @@
     <color name="color_3">#38CC77</color>
     <color name="color_4">#D9D55B</color>
     <color name="color_5">#31BBD1</color>
-    <color name="color_6">#D345D0</color>
+    <color name="dark_black">#948F93</color>
 
 </resources>
