--- a/app/src/main/res/drawable/round_outline.xml
+++ b/app/src/main/res/drawable/round_outline.xml
@@ -2,13 +2,12 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="15dp">
 
-    <solid android:color="@color/white"/>
     <corners
         android:bottomRightRadius="0dp"
         android:bottomLeftRadius="0dp"
         android:topRightRadius="0dp"
         android:topLeftRadius="0dp"/>
 
-        <stroke android:width="1dp" android:color="@color/blue"/>
+        <stroke android:width="1dp" android:color="@color/dark_black"/>
 
 </shape>
