--- a/app/src/main/res/layout/activity_add_goal.xml
+++ b/app/src/main/res/layout/activity_add_goal.xml
@@ -66,7 +66,6 @@
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         android:autofillHints="Title"/>
 
-
     <EditText
         android:id="@+id/et_deadline"
         android:layout_width="0dp"
@@ -85,22 +84,6 @@
         android:autofillHints="Date"
         android:inputType="date" />
 
-    <EditText
-        android:id="@+id/et_categories"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:minHeight="48dp"
-        android:background="@drawable/round_outline"
-        android:hint="@string/categories"
-        android:inputType="text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_deadline"
-        android:autofillHints="Categories"/>
-
 
     <EditText
         android:id="@+id/et_description"
@@ -117,23 +100,30 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/et_categories"
+        app:layout_constraintTop_toBottomOf="@id/textField"
         android:autofillHints="Description" />
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textField"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_deadline"
         tools:ignore="MissingConstraints">
 
         <AutoCompleteTextView
-            android:id="@+id/auto_complete"
+            android:id="@+id/et_categories"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="none"/>
+            android:inputType="none"
+            android:textColor="@color/dark_black"
+            android:text="@string/categories"/>
 
     </com.google.android.material.textfield.TextInputLayout>
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
