--- a/app/src/main/res/layout/dropdown_list.xml
+++ b/app/src/main/res/layout/dropdown_list.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:textColor="@color/black"
-    android:padding="16dp">
+    android:textSize="20sp"
+    android:padding="12dp">
 
 </TextView>
 
