--- a/app/src/main/res/layout/activity_add_goal.xml
+++ b/app/src/main/res/layout/activity_add_goal.xml
@@ -29,11 +29,11 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="100dp"
                 android:layout_marginTop="7dp"
                 android:textStyle="bold"
                 android:textSize="20sp"
                 android:text="@string/add_goal"
+                android:layout_centerHorizontal="true"
                 tools:ignore="RelativeOverlap" />
 
             <ImageView
@@ -56,6 +56,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
+        android:padding="13dp"
         android:minHeight="48dp"
         android:textSize="20sp"
         android:background="@drawable/round_outline"
@@ -72,6 +73,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:padding="13dp"
         android:layout_marginEnd="16dp"
         android:minHeight="48dp"
         android:background="@drawable/round_outline"
@@ -92,6 +94,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:padding="13dp"
         android:gravity="top"
         android:hint="@string/description"
         android:inputType="textMultiLine"
