--- a/app/src/main/res/menu/pop_up_menu.xml
+++ b/app/src/main/res/menu/pop_up_menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/delete_goal"
+     <item android:id="@+id/delete_goal"
         android:title="@string/delete"/>
 </menu>
